--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
           var fontLoader = new THREE.FontLoader();
           fontLoader.load( 'media/fonts/helvetiker_bold.typeface.json', function ( font ) {
 
-            var textGeo = new THREE.TextGeometry( "WebGL 2", {
+            var textGeo = new THREE.TextGeometry( "Stephanie", {
               size: 1.0,
               height: 0.25,
               curveSegments: 0,
